--- a/app/GUI_test.html
+++ b/app/GUI_test.html
@@ -28,6 +28,37 @@
 			<br>
 			<br>
 		</p>
+		<hr>
+<script>
+function myFunction() {
+document.getElementById("demo").innerHTML = "Paragraph changed.";
+}
+const actualBtn = document.getElementById('actual-btn');
+const fileChosen = document.getElementById('file-chosen');
+actualBtn.addEventListener('change', function(){
+fileChosen.textContent = this.files[0].name
+})
+</script>
+		<p id="demo"> A Paragraph.
+		</p>
+		<button type="button" onclick="myFunction()"> Try it
+		</button>
+		<hr>
+		<!-- actual upload which is hidden -->
+		<input type="file" id="actual-btn" hidden/>
+		<!-- our custom upload button -->
+		<label for="actual-btn"> Choose File
+		</label>
+		<!-- name of file chosen -->
+		<span id="file-chosen"> No file chosen
+		</span>
+		<hr>
+		<div class="upload-btn-wrapper">
+			<button class="btn2"> Datei übermitteln
+			</button>
+			<input type="file" name="myfile" />
+		</div>
+		<hr>
 		<i>Eine eCH-0160 Metadaten Datei für die Konvertierung auswählen:</i>
 		<br>
 		<!-- Upload Formular, zweispaltig -->
@@ -43,7 +74,7 @@
 						</form>
 					</th>
 					<th>
-						<form action="C:\workbench\_Workbench\app\GUI_static_template.html" method="post">
+						<form action="C:\workbench\_Workbench\app\GUI_test.html" method="post">
 							<input name="usr" value="usr_rKEOsg" type="hidden">
 							<input name="RESET" value="true" type="hidden">
 							<input class="btn" value="Reset" type="submit" style="font-size:100%">
