--- a/app/GUI_test.html
+++ b/app/GUI_test.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<link href="./ingest.css" rel="stylesheet" type="text/css">
+<script src="./jquery.min.js"></script>
 		<title> KOST Referenzimplementierung
 		</title>
 	</head>
@@ -29,36 +30,6 @@
 			<br>
 		</p>
 		<hr>
-<script>
-function myFunction() {
-document.getElementById("demo").innerHTML = "Paragraph changed.";
-}
-const actualBtn = document.getElementById('actual-btn');
-const fileChosen = document.getElementById('file-chosen');
-actualBtn.addEventListener('change', function(){
-fileChosen.textContent = this.files[0].name
-})
-</script>
-		<p id="demo"> A Paragraph.
-		</p>
-		<button type="button" onclick="myFunction()"> Try it
-		</button>
-		<hr>
-		<!-- actual upload which is hidden -->
-		<input type="file" id="actual-btn" hidden/>
-		<!-- our custom upload button -->
-		<label for="actual-btn"> Choose File
-		</label>
-		<!-- name of file chosen -->
-		<span id="file-chosen"> No file chosen
-		</span>
-		<hr>
-		<div class="upload-btn-wrapper">
-			<button class="btn2"> Datei übermitteln
-			</button>
-			<input type="file" name="myfile" />
-		</div>
-		<hr>
 		<i>Eine eCH-0160 Metadaten Datei für die Konvertierung auswählen:</i>
 		<br>
 		<!-- Upload Formular, zweispaltig -->
@@ -69,7 +40,17 @@ fileChosen.textContent = this.files[0].name
 						<form enctype="multipart/form-data" action="https://kost-ceco.ch/isadg/app_beta/ingest.php" method="post">
 							<input name="MAX_FILE_SIZE" value="100000000" type="hidden">
 							<input name="usr" value="usr_rKEOsg" type="hidden">
-							<input class="btn" name="uploadedfile" size="80" type="file" style="font-size:100%">
+							<!-- actual upload which is hidden -->
+							<input name="uploadedfile" size="80" type="file" class="custom-file-input" id="actual-btn" hidden/> 
+							<!-- custom upload button -->
+							<label class="btn" for="actual-btn">
+								Datei auswählen 
+							</label> 
+							<!-- name of file chosen -->
+							<span class="custom-file-label" id="file-chosen">
+								Keine Datei ausgewählt 
+							</span>
+							<!-- submit button -->
 							<input class="btn" value="Datei übermitteln" type="submit" style="font-size:100%">
 						</form>
 					</th>
@@ -77,12 +58,20 @@ fileChosen.textContent = this.files[0].name
 						<form action="C:\workbench\_Workbench\app\GUI_test.html" method="post">
 							<input name="usr" value="usr_rKEOsg" type="hidden">
 							<input name="RESET" value="true" type="hidden">
+							<!-- reset button -->
 							<input class="btn" value="Reset" type="submit" style="font-size:100%">
 						</form>
 					</th>
 				</tr>
 			</tbody>
 		</table>
+<script>
+// Add the following code if you want the name of the file appear on select
+$(".custom-file-input").on("change", function() {
+var fileName = $(this).val().split("\\").pop();
+$(this).siblings(".custom-file-label").addClass("selected").html(fileName);
+});
+</script>
 		<hr>
 		<i>Folgende Dateien sind bereits übertragen:</i>
 		<ul>
@@ -107,8 +96,8 @@ fileChosen.textContent = this.files[0].name
 						<td style="text-align: right;">
 							Bestand-Signatur:</td>
 						<td colspan="2" rowspan="1">
-							<input name="collsig" size="20" type="text" title="Signatur (Archiv- &amp; Bestandkürzel) des Knoten in der Archivtektonik an den die Ablieferung eingehängt werden soll"> Bestandtitel:
-							<input name="colltitle" size="60" type="text" title="Beschreibung des Knotens in der Archivtektonik an den die Ablieferung eingehängt werden soll"></td>
+							<input class="form-control" name="collsig" size="16" type="text" title="Signatur (Archiv- &amp; Bestandkürzel) des Knoten in der Archivtektonik an den die Ablieferung eingehängt werden soll"> Bestandtitel:
+							<input class="form-control" name="colltitle" size="54" type="text" title="Beschreibung des Knotens in der Archivtektonik an den die Ablieferung eingehängt werden soll"></td>
 					</tr>
 					<tr>
 						<td></td>
