--- a/app/GUI_static_template.html
+++ b/app/GUI_static_template.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
-<!-- saved from url=(0046)https://kost-ceco.ch/isadg/app_beta/ingest.php -->
+<!-- saved from url=(0041)https://kost-ceco.ch/isadg/app/ingest.php -->
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<link href="./ingest.css" rel="stylesheet" type="text/css">
 <script src="./jquery.min.js"></script>
-		<title> KOST Referenzimplementierung
+		<title>
+			KOST Descriptive Information Converter 2.1
 		</title>
 	</head>
 	<body background="./background.jpg">
-		<h1> KOST Referenzimplementierung - Descriptive Information 2.1
-			<span class="versionBeta"> (Rev. 142/beta)
+		<h1>KOST Descriptive Information Converter 2.1 
+			<span class="versionText">
+				(Rev. 155)
 			</span></h1>
 		<p> Diese
 			<i>Descriptive Information</i> Referenzimplementierung konvertiert eine eCH-0160 Metadaten Datei in eine xIsadg oder EAD Datei. Die importierte Metadaten Datei wird mit einer Schema Validierung überprüft, verschiedene Metadatenschema werden erkannt; konvertiert werden können aber nur eCH-0160 Metadaten. Ziel ist das Extrahieren der ISAD(G) relevanten Metadaten, die
@@ -19,7 +21,7 @@
 			<a href="https://test.ech.ch/alfresco/s/ech/download?nodeid=e05d969b-1bff-4593-ad57-d751cc5473aa">Extraktion deskriptiver Metadaten aus der archivischen Ablieferungsschnittstelle eCH-0160</a> und der Crosswalk
 			<a href="https://kost-ceco.ch/cms/dl/91141f46022f5f2dd1f8fa9409d2dcab/eCH-0160_xIsadg%26EAD_v2.1.xlsx">eCH-0160_xIsadg&amp;EAD_v2.1.xlsx</a>. Unterstützt werden die Ausgangsformate eCH-0160 1.0 und eCH-0160 1.1; Zielformat ist xIsadg v1.6.1 und xIsadg v2.1, EAD in der Ausprägung METS Matterhorn Profil und RIC-O Version 0.1
 			<br> Technisch basiert die Konvertierung auf folgenden XSLT Transformationen
-			<a href="./eCH-0160_xIsadg&amp;EAD&amp;RIC.xsl.zip">eCH-0160_xIsadg&amp;EAD&amp;RIC.xsl.zip</a>
+			<a href="https://kost-ceco.ch/isadg/app/eCH-0160_xIsadg&amp;EAD&amp;RIC.xsl.zip">eCH-0160_xIsadg&amp;EAD&amp;RIC.xsl.zip</a>
 			<br> Eine Windows Commandline Batch Datei mit Saxon9 und xmllint ist in dieser ZIP Datei ebenfalls zu finden.
 			<br> Die Basisdokumente für die Metadatenschema sind die folgenden
 			<i>Data Dictionaries</i> :
@@ -29,7 +31,6 @@
 			<br>
 			<br>
 		</p>
-		<hr>
 		<i>Eine eCH-0160 Metadaten Datei für die Konvertierung auswählen:</i>
 		<br>
 		<!-- Upload Formular, zweispaltig -->
@@ -37,29 +38,29 @@
 			<tbody>
 				<tr>
 					<th>
-						<form enctype="multipart/form-data" action="https://kost-ceco.ch/isadg/app_beta/ingest.php" method="post">
+						<form enctype="multipart/form-data" action="./GUI_static_template.html" method="post">
 							<input name="MAX_FILE_SIZE" value="100000000" type="hidden">
-							<input name="usr" value="usr_rKEOsg" type="hidden">
+							<input name="usr" value="usr_ozmUn6" type="hidden">
 							<!-- actual upload which is hidden -->
-							<input name="uploadedfile" size="80" type="file" class="custom-file-input" id="actual-btn" hidden/> 
+							<input name="uploadedfile" size="80" type="file" class="custom-file-input" id="actual-btn" hidden="">
 							<!-- custom upload button -->
 							<label class="btn" for="actual-btn">
 								Datei auswählen 
-							</label> 
+							</label>
 							<!-- name of file chosen -->
 							<span class="custom-file-label" id="file-chosen">
 								Keine Datei ausgewählt 
 							</span>
 							<!-- submit button -->
-							<input class="btn" value="Datei übermitteln" type="submit" style="font-size:100%">
+							<input class="btn" value="Datei übermitteln" type="submit">
 						</form>
 					</th>
 					<th>
-						<form action="C:\workbench\_Workbench\app\GUI_test.html" method="post">
-							<input name="usr" value="usr_rKEOsg" type="hidden">
+						<form action="./GUI_static_template.html" method="post">
+							<input name="usr" value="usr_ozmUn6" type="hidden">
 							<input name="RESET" value="true" type="hidden">
 							<!-- reset button -->
-							<input class="btn" value="Reset" type="submit" style="font-size:100%">
+							&nbsp;&nbsp;&nbsp;<input class="btn" value="Reset" type="submit" style="font-size:100%">
 						</form>
 					</th>
 				</tr>
@@ -75,17 +76,17 @@ $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
 		<hr>
 		<i>Folgende Dateien sind bereits übertragen:</i>
 		<ul>
-			<li>metadata.xml&nbsp;&nbsp;&nbsp; (29776 bytes)&nbsp;&nbsp;&nbsp; eCH-0160 1.0 / arelda_v4 SIP Metadata</li>
+			<li>arelda_v4-metadata.xml&nbsp;&nbsp;&nbsp; (26283 bytes)&nbsp;&nbsp;&nbsp; eCH-0160 1.0 / arelda_v4 SIP Metadata</li>
 		</ul>
 		<hr>
 		<i> Folgende Datei steht zur Konvertierung bereit:
-			<b>metadata.xml</b></i>
+			<b>arelda_v4-metadata.xml</b></i>
 		<br>
 		<br>
 		<!-- Formular für manuellen Dateninput, dreispaltig -->
-		<form action="https://kost-ceco.ch/isadg/app_beta/processingest.php" method="post">
-			<input name="metadatafile" value="metadata.xml" type="hidden">
-			<input name="wdir" value="wdir/usr_rKEOsg" type="hidden">
+		<form action="./GUI_static_template.html" method="post">
+			<input name="metadatafile" value="arelda_v4-metadata.xml" type="hidden">
+			<input name="wdir" value="wdir/usr_ozmUn6" type="hidden">
 			<table style="width: 100%;">
 				<tbody>
 					<tr>
@@ -123,11 +124,10 @@ $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
 							<input type="radio" name="xschema" value="xIsadg" title="Ausgabe als xIsadg Metadaten Datei" checked=""> xIsadg 1.6.1
 							<input type="radio" name="xschema" value="xI2sadg" title="Ausgabe als xIsadg Metadaten Datei Version 2.1"> xIsadg 2.1
 							<input type="radio" name="xschema" value="EAD" title="Ausgabe als EAD Metadaten Datei (METS Matterhorn Style)"> EAD
-							<input type="radio" name="xschema" value="RIC" title="Ausgabe als RIC Metadaten Datei Version 0.1">
-							RIC</td>
+							<input type="radio" name="xschema" value="RIC" title="Ausgabe als RIC Metadaten Datei Version 0.1"> RIC 0.1(beta)</td>
 						<td>
 							<div style="text-align: right;">
-								<input class="btn" value="Konvertieren" type="submit">
+								<input class="btn" value="Konvertieren" type="submit" style="font-size:100%">
 							</div></td>
 					</tr>
 				</tbody>
@@ -135,6 +135,6 @@ $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
 		</form>
 		<span class="copyright">
 			<a href="https://kost-ceco.ch/">Copyright © 2005-2020 by Koordinationsstelle für die dauerhafte Archivierung elektronischer Unterlagen</a>
-		</span>
+		</span> 
 	</body>
 </html>
